--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ async function loadWeather() {
             `;
         });
     } catch (err) {
-        area.innerHTML = "⚠️ 無法取得天氣資料";
+        area.innerHTML = "⚠️ 無法取得天氣資料!";
         console.error(err);
     }
 }
